--- a/.github/workflows/auto-video-generator.yml
+++ b/.github/workflows/auto-video-generator.yml
@@ -1,5 +1,12 @@
 name: Auto Video Generator Workflow
 
+
+
+on:
+  schedule:
+    - cron: "0 */6 * * *"  # Runs every 6 hours
+  workflow_dispatch:  # Manually trigger the workflow if needed
+
 # Trigger the workflow to run every 6 hours
 on:
   schedule:
